manifests/federated-prometheus/alert-manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: federated-prometheus
  labels:
    app: federated-monitor
spec:
  ports:
    - name: alertmanager
      port: 9093
      targetPort: 9093
      protocol: TCP
  selector:
    alertmanager: alertmanager
  type: ClusterIP
