manifests/federated-prometheus/federated-prometheus-direct-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: federated-prometheus-direct
  namespace: federated-prometheus
spec:
  ports:
    - name: prometheus
      protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    app: prometheus
    prometheus: federated-prometheus
  type: ClusterIP
  sessionAffinity: None
