manifests/federated-prometheus/prometheus.yaml

apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: prometheus-k8s-tls
  labels:
    prometheus: federated-prometheus
  name: prometheus-k8s
  namespace:  federated-prometheus
spec:
  ports:
  - name: web-proxy
    port: 9091
    protocol: TCP
    targetPort: web-proxy
  selector:
    app: prometheus
    prometheus: federated-prometheus
  type: ClusterIP
