manifests/federated-prometheus/sidecar-sevice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thanos-sidecar
  name: thanos-sidecar
  namespace: federated-prometheus
spec:
  clusterIP: None
  ports:
  - name: grpc
    port: 10901
    targetPort: grpc
  selector:
    prometheus: federated-prometheus
