manifests/federated-prometheus/thanos-compactor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-compactor
  labels:
    app: thanos-compactor
  namespace: federated-prometheus
spec:
  selector:
    app: thanos-compactor
  ports:
  - port: 10902
    name: http
