manifests/federated-prometheus/thanos-peers-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-peers
  namespace: federated-prometheus
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: cluster
    port: 10900
    targetPort: cluster
  - name: http
    port: 10902
    targetPort: http
  selector:
    thanos-peers: "true"
