manifests/federated-prometheus/federated-prometheus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    prometheus: federated-prometheus
  name: federated-prometheus
  namespace: federated-prometheus
spec:
  port:
    targetPort: web-proxy
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: prometheus-k8s
    weight: 100
  wildcardPolicy: None
