manifests/federated-prometheus/grafana-route-basic-auth-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: grafana-route-basic-auth
  namespace: federated-prometheus
spec:
  port:
    targetPort: grafana
  tls:
    termination: edge
  to:
    kind: Service
    name: grafana-service
    weight: 100
  wildcardPolicy: None
