manifests/federated-prometheus/thanos-query-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thanos-query
  name: thanos-query
  namespace: federated-prometheus
spec:
  ports:
  - name: http
    port: 10902
    targetPort: http
  selector:
    app: thanos-query

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: thanos-query
  namespace: federated-prometheus
  labels:
    app: thanos-query
spec:
  to:
    kind: Service
    name: thanos-query
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
